# raytracer

./: CMakeLists.txt  README.md  run.sh
src/: geometry.cc  geometry.h  main.cc  math.cc  math.h  rays.cc  rays.h  raytracer.cc  synchronized_queue.h  window.cc  window.h
